--- a/Practico2HDP/Views/Tiendas/Details.cshtml
+++ b/Practico2HDP/Views/Tiendas/Details.cshtml
@@ -34,6 +34,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Web)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Web)
+        </dd>
     </dl>
 </div>
 <div>
