--- a/Practico2HDP/Views/Tiendas/Create.cshtml
+++ b/Practico2HDP/Views/Tiendas/Create.cshtml
@@ -33,6 +33,7 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
+                @* No logro hacer que funcione este campo Web, no guarda nada en la tabla Tienda... *@
                 <label asp-for="Web" class="control-label"></label>
                 <input asp-for="Web" class="form-control" />
                 <span asp-validation-for="Web" class="text-danger"></span>
