--- a/Practico2HDP/Views/Shared/_Layout.cshtml
+++ b/Practico2HDP/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tiendas" asp-action="">Tiendas</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="">Clientes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
